<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_graph"
    app:startDestination="@id/watchlistDest" >

    <fragment
        android:id="@+id/watchlistDest"
        android:name="com.intive.tmdbandroid.home.ui.WatchlistFragment"
        android:label="@string/watchlist"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/moviesDest"
        android:name="com.intive.tmdbandroid.home.ui.MoviesFragment"
        android:label="@string/popular_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/tvShowsDest"
        android:name="com.intive.tmdbandroid.home.ui.TVShowsFragment"
        android:label="@string/popular_tvShows"
        tools:layout="@layout/fragment_tvshows" />

</navigation>