<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="@dimen/margin_large"
    android:paddingStart="@dimen/margin_large"
    android:paddingTop="@dimen/margin_medium"
    android:paddingBottom="@dimen/margin_medium">

    <TextView
        android:id="@+id/rank_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rate_title"
        android:textSize="@dimen/title_size" />

    <TextView
        android:id="@+id/rank_dialog_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/rate_subtitle"
        android:textSize="@dimen/subtitle_size" />

    <RatingBar
        android:id="@+id/dialog_ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_short"
        android:clickable="true"
        android:focusable="true"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="2.5"
        android:stepSize="0.5"
        android:theme="@style/RatingBar"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/rank_dialog_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:text="@string/cancel_button_text"
            android:textColor="#2196F3"
            android:textSize="@dimen/subtitle_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rank_dialog_button_rate" />

        <Button
            android:id="@+id/rank_dialog_button_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:text="@string/confirm_button_text"
            android:textColor="@color/material_on_background_emphasis_high_type"
            android:textSize="@dimen/subtitle_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>
