<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/primaryColor"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_text"
            android:searchIcon="@null" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/all_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_short"
        android:background="@drawable/chip_background"
        android:backgroundTint="@color/secondaryLightColor"
        android:paddingHorizontal="@dimen/margin_medium"
        android:text="@string/all_filter"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tv_shows_filter"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_search_toolbar" />

    <TextView
        android:id="@+id/tv_shows_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_short"
        android:background="@drawable/chip_background"
        android:backgroundTint="@color/secondaryLightColor"
        android:paddingHorizontal="@dimen/margin_medium"
        android:text="@string/tv_shows_filter"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/movies_filter"
        app:layout_constraintStart_toEndOf="@+id/all_filter"
        app:layout_constraintTop_toBottomOf="@id/fragment_search_toolbar" />

    <TextView
        android:id="@+id/movies_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_short"
        android:background="@drawable/chip_background"
        android:backgroundTint="@color/secondaryLightColor"
        android:paddingHorizontal="@dimen/margin_medium"
        android:text="@string/movies_filter"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/people_filter"
        app:layout_constraintStart_toEndOf="@+id/tv_shows_filter"
        app:layout_constraintTop_toBottomOf="@id/fragment_search_toolbar" />

    <TextView
        android:id="@+id/people_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_short"
        android:background="@drawable/chip_background"
        android:backgroundTint="@color/secondaryLightColor"
        android:paddingHorizontal="@dimen/margin_medium"
        android:text="@string/people_filter"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movies_filter"
        app:layout_constraintTop_toBottomOf="@id/fragment_search_toolbar" />

    <TextView
        android:id="@+id/result_search_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_medium"
        android:paddingHorizontal="@dimen/margin_medium"
        app:layout_constraintBottom_toTopOf="@id/search_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/all_filter"
        tools:text="@string/search_result_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_search_header"
        tools:listitem="@layout/item_found_search" />


    <include
        android:id="@+id/layout_error"
        layout="@layout/layout_error" />

    <include
        android:id="@+id/layout_empty"
        layout="@layout/layout_empty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_search_header" />

    <include
        android:id="@+id/layout_progressbar"
        layout="@layout/layout_progressbar"
        tools:visibility="gone" />

    <include
        android:id="@+id/layout_search_hint"
        layout="@layout/layout_search_hint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_short"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/all_filter"
        tools:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>