<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".details.ui.DetailFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorContainer_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayoutDetail"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/primaryColor"
                app:expandedTitleMarginBottom="20dp"
                app:expandedTitleMarginStart="15dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <ImageView
                    android:id="@+id/background_image_toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.3"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    android:contentDescription="@string/collapsing_toolbar_description"
                    tools:src="@drawable/ic_launcher_foreground" />

                <ImageView
                    android:id="@+id/image_detail_imageView"
                    android:layout_width="155dp"
                    android:layout_height="230dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:cropToPadding="true"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/details_poster_description"
                    tools:src="@drawable/ic_launcher_foreground" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
                    app:contentInsetStart="0dp"
                    app:titleMarginStart="16dp"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/first_air_date_detail_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    tools:text="2021" />

                <TextView
                    android:id="@+id/status_detail_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    tools:text="Now Streaming" />

                <TextView
                    android:id="@+id/genres_detail_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    tools:text="Animation, Action, Adventure, Sci-Fci, Fantasy " />

                <TextView
                    android:id="@+id/number_of_seasons_detail_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:textColor="@color/black"
                    tools:visibility="gone"
                    tools:text="1 Season" />

                <TextView
                    android:id="@+id/number_of_episodes_detail_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    tools:visibility="gone"
                    android:textColor="@color/black"
                    tools:text="5 Episodes" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/overview_textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/overview"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/trailer_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="3dp"
                        android:drawablePadding="3dp"
                        android:gravity="end|center_vertical"
                        android:text="@string/watch_trailer"
                        app:drawableEndCompat="@drawable/ic_play" />

                </LinearLayout>

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/screening_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showFullScreenButton="false"
                    android:layout_marginTop="8dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/overview_detail_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:lineSpacingExtra="4dp"
                    android:textColor="@color/black"
                    tools:text="Taking inspiration from the comic books of the same name, each episode explores a pivotal moment from the Marvel Cinematic Universe and turns it on its head, leading the audience into uncharted territory." />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.cardview.widget.CardView
            android:id="@+id/popularity_card"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/primaryColor"
            app:cardCornerRadius="100dp"
            app:cardElevation="3dp"
            app:layout_anchor="@id/appBarLayoutDetail"
            app:layout_anchorGravity="end|bottom"
            tools:src="@drawable/ic_launcher_foreground">

            <ProgressBar
                android:id="@+id/circular_percentage"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_margin="2dp"
                android:indeterminate="false"
                android:max="100"
                android:progressDrawable="@drawable/ring"
                android:rotation="-90"
                android:secondaryProgress="100" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/screening_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/secondaryColor"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="100%" />

        </androidx.cardview.widget.CardView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <include
        android:id="@+id/layout_error_detail"
        layout="@layout/layout_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        android:id="@+id/layout_loading_detail"
        layout="@layout/layout_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>